<resources>
    <string name="app_name">Bling</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="nearby">Coming soon</string>

    <string name="title_login">Sign in</string>
    <string name="title_register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="title_settings">Settings</string>
    <string name="title_back">Back</string>
    <string name="title_activity_position">Map</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="status_signing_in">Signing in (…, &#8230;)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="prompt_date">Birthdate</string>

    <string name="welcome_message">Welcome to Bling!</string>
    <string name="prompt_friend">Friends name</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_bling">BLING BACK</string>
    <string name="friend_request_message">Wants to be your friend</string>
    <string name="action_accept_friend">Accept</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_invalid_user">Invalid username or password</string>
    <string name="title_logout">Logout</string>
    <string name="api_down">Could not reach Bling servers, try again later.</string>
    <string name="bling_alternatives">Select Bling type</string>
    <string name="alternative_distance">Distance</string>
    <string name="alternative_position">Position</string>
</resources>
