<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/Color.Back.Base"
    tools:context=".activity.SplashActivity" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="46dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="35dp"/>

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:id="@+id/logo"
        android:src="@drawable/logo_large2"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView"
        />


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/action_sign_in"
        android:textSize="40sp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/textColorPrimary"
        android:layout_alignParentBottom="true" />

    <View
        style="@style/Divider"
        android:id="@+id/button_divider"
        android:layout_above="@id/login_button" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/action_register"
        android:textSize="40sp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/textColorPrimary"
        android:layout_above="@id/button_divider"/>
</RelativeLayout>
