<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:theme="@style/Color.Back.Base"
    tools:context=".activity.LoginActivity" >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textAppearance="@android:color/white"
            style="@style/EditTextLight"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="25sp"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_login"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_title"
        android:layout_gravity="center_horizontal"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:layout_above="@id/login_form"
        android:layout_marginBottom="40dp"
        />
    -->
    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/sign_in_logo"
        android:src="@drawable/logo_large"
        android:layout_above="@id/login_form"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:textSize="40sp"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/textColorPrimary"/>


    </LinearLayout>

</RelativeLayout>
